updated final report with varadas suggestions

--- a/reports/Final_Report.Rmd
+++ b/reports/Final_Report.Rmd
@@ -145,9 +145,9 @@ Figure 4: Comparison bar charts of our model's and [last year's capstone group's
 ```{r, evaluate=FALSE, include=FALSE}
 baseline <- read.csv("tables/baseline_results.csv")
 
-kable(baseline[1,] %>%
-        select(Class, Test.Accuracy, Test.Recall,
-               Test.Precision, Test.F1))
+#kable(baseline[1,] %>%
+ #       select(Model, Test.Accuracy, Test.Recall,
+  #             Test.Precision, Test.F1))
 
 advanced <- read.csv("tables/theme_tables/theme_pred_test_results.csv")
 
