--- a/reports/Final_Report.Rmd
+++ b/reports/Final_Report.Rmd
@@ -26,11 +26,11 @@ library(knitr)
 
 ## Executive Summary
 
-BC Stats conducts the Work Environment Survey (WES) for BC Public Service’s ministries with the goals of identifying areas for improvement and understanding employee’s experiences. We’ve used natural language processing and machine learning classification techniques to automate labelling of responses to the open-ended questions into various themes and subthemes. These models may be used on their own or to assist human annotators to speed up the manual labelling process. We have also developed an app to explore the data with visualizations. 
+BC Stats conducts the Work Environment Survey (WES) for BC Public Service’s ministries with the goals of identifying areas for improvement and understanding employee’s experiences. We have used natural language processing and machine learning classification techniques to automate labelling of responses to the open-ended questions into various themes and subthemes. These models may be used on their own or to assist human annotators to speed up the manual labelling process. We have also developed an app to explore the data with visualizations. 
 
 ## Introduction
 
-The BC Public Service commits to maintaining the health of work environments and identifying areas for improvement through the Work Environment Survey (WES). The survey consists of ~80 quantitative questions using a 5 Likert scale and two open-ended qualitative questions which have not been fully looked into by BC Stats. Due to this, we are solely focusing on these qualitative questions.
+The BC Public Service commits to maintaining the health of work environments and identifying areas for improvement through the Work Environment Survey (WES). The survey consists of ~80 quantitative questions using a 5 Likert scale and two open-ended qualitative questions, shown below, which have not been fully looked into by BC Stats. Due to this, we are solely focusing on these qualitative questions.
 
 ***Question 1:*** 
 *"What one thing would you like your organization to focus on to improve your work environment?"* 
@@ -38,7 +38,7 @@ The BC Public Service commits to maintaining the health of work environments and
 ***Question 2:***
 *"Have you seen any improvements in your work environment and if so, what are the improvements?"*
 
-The responses have been manually encoded by BC Stats into various themes and subthemes which is time-consuming and expensive. We propose using multi-label machine learning classifiers and natural language processing to automate this process. There is currently one solution from a previous capstone project for labelling the comments from Question 1 using their 12 themes. Labelling subthemes for Question 1 and themes for Question 2 have not yet been automated. So, our objectives are as follows:
+BC Stats has been manually encoding the responses to these questions into various themes and subthemes, which is time consuming and expensive. We propose using multi-label machine learning classifiers and natural language processing to automate this process. We compare our results of classifying main themes with the results obtained by last year’s MDS Capstone group, who worked on the same problem. In addition, we explored two problems which were not explored last year. First, we propose an approach to classify subthemes, and second, we propose an approach to classify responses of Question 2. Accordingly, our objectives are as follows:
 
 **Our Objectives**
 
@@ -52,7 +52,7 @@ The responses have been manually encoded by BC Stats into various themes and sub
 
 **Data**
 
-There are +31,000 labelled comments (2013, 2018, 2020) and +12,000 additional unlabelled comments (2015) for Question 1. Question 2 has +6,000 labelled comments (2018) and +9,000 additional unlabelled comments (2015, 2020). The 12 themes and 63 subthemes used in Question 1 have been used in the past and deemed reliable by BC Stats, whereas Question 2’s themes needed to be further analyzed.
+There are 31,000+ labelled comments (2013, 2018, 2020) and 12,000+ additional unlabelled comments (2015) for Question 1. Question 2 has 6,000+ labelled comments (2018) and 9,000+ additional unlabelled comments (2015, 2020). The 12 theme and 63 subtheme labels for Question 1 have been used in the past and deemed reliable by BC Stats, whereas Question 2’s themes needed further analysis.
 
 \newpage
 
@@ -62,23 +62,23 @@ There are +31,000 labelled comments (2013, 2018, 2020) and +12,000 additional un
 
 Our main approach involves using [multi-label theme classification](https://en.wikipedia.org/wiki/Multi-label_classification) methods. We first develop a theme model that labels the survey comments into their predicted themes. Next, we follow a top-down approach where we define a hierarchical two-stage model to predict the subthemes. In stage 1, we predict the themes for the comments using the main theme model. In stage 2, based on the predicted themes from stage 1, we further classify the comment down into their respective subthemes. 
 
-We used traditional feature-based classifiers as well as pre-trained embeddings and deep-learning classifiers to produce our models.  
+We handled sensitive information in our preprocessing step using [Named Entity Recognition](https://towardsdatascience.com/named-entity-recognition-with-nltk-and-spacy-8c4a7d88e7da) to anonymize the comments. We used traditional feature-based classifiers as well as pre-trained embeddings and deep-learning classifiers to produce our models.  
 
 **Baseline Models: TF-IDF Vectorizer + LinearSVC**
 
-For our baseline approach, we used a multi-labelling method called [Classifier Chains](https://link.springer.com/chapter/10.1007/978-3-642-04174-7_17), which works to preserve the order and occurrence of labels. [TF-IDF Vectorizer](https://en.wikipedia.org/wiki/Tf–idf) assigns a weight to the words in the comments based on importance which transforms our data to a sparse matrix. This was applied to the Classifier Chains and [linear support vector classifier](https://pythonprogramming.net/linear-svc-example-scikit-learn-svm-python/) (LinearSVC) as the baseline model. Other traditional models such as RandomForest and GaussianNB resulted in either slow training times or low results. This traditional approach is interpretable and simple, but does not consider the complexities of the English language gained with pre-trained embeddings. 
+For our baseline approach, we used a multi-labelling method called [Classifier Chains](https://link.springer.com/chapter/10.1007/978-3-642-04174-7_17), which models correlations between the multiple labels. [TF-IDF Vectorizer](https://en.wikipedia.org/wiki/Tf–idf) creates a sparse representation of text with TF-IDF features that weighs most interesting words more. We use this representation with Classifier Chains and [linear support vector classifier](https://pythonprogramming.net/linear-svc-example-scikit-learn-svm-python/) (LinearSVC), which is our baseline model. Other traditional models such as RandomForest and GaussianNB resulted in either slow training times or low results.
 
 **Advanced Models: Pre-trained Embeddings + Deep Learning Models**
 
-Several pre-trained embeddings including [GloVe](https://nlp.stanford.edu/projects/glove/), [FastText](https://fasttext.cc/) and [Universal Sentence Encoder](https://tfhub.dev/google/universal-sentence-encoder/4) were explored allowing us to leverage in-depth semantic meaning and useful vector representation of the words in the comments. These were used to build embedding matrixes and padded data to fit into the embeddings sizes. This was important as it allowed us to upload our sensitive data onto public cloud services (Google Colab) to apply more computationally expensive deep learning models. The advanced models we explored were [Multi-channel CNNs](https://machinelearningmastery.com/develop-n-gram-multichannel-convolutional-neural-network-sentiment-analysis/), [CNNs](https://en.wikipedia.org/wiki/Convolutional_neural_network), and [Bidirectional GRUs](https://medium.com/@felixs_76053/bidirectional-gru-for-text-classification-by-relevance-to-sdg-3-indicators-2e5fd99cc341#:~:text=Bidirectional%20GRU's%20are%20a%20type,predictions%20about%20the%20current%20state.&text=Gated%20Recurrent%20Unit%20(GRU)%20for%20Emotion%20Classification%20from%20Noisy%20Speech.) or Bi-GRUs. 
+Other than TF-IDF representation, we also explored semantically richer text representations with word and text embeddings such as [GloVe](https://nlp.stanford.edu/projects/glove/), [FastText](https://fasttext.cc/) and [Universal Sentence Encoder](https://tfhub.dev/google/universal-sentence-encoder/4). These were used to build embedding matrixes and padded data to fit into the embeddings sizes. This was important as it allowed us to upload our sensitive data onto public cloud services (Google Colab) to apply more computationally expensive deep learning models. The advanced models we explored were [Multi-channel CNNs](https://machinelearningmastery.com/develop-n-gram-multichannel-convolutional-neural-network-sentiment-analysis/), [CNNs](https://en.wikipedia.org/wiki/Convolutional_neural_network), and [Bidirectional GRUs](https://medium.com/@felixs_76053/bidirectional-gru-for-text-classification-by-relevance-to-sdg-3-indicators-2e5fd99cc341#:~:text=Bidirectional%20GRU's%20are%20a%20type,predictions%20about%20the%20current%20state.&text=Gated%20Recurrent%20Unit%20(GRU)%20for%20Emotion%20Classification%20from%20Noisy%20Speech.) or Bi-GRUs. 
 
-Multi-channel CNNs are multiple versions of standard CNN models. We have used different kernel sizes for each channel. Specifically, we have defined a model with 3 input channels for kernel sizes 4, 6, and 8. 
+Multi-channel CNNs are multiple versions of standard CNN models. For our model (Figure 1), we have used different kernel sizes for each channel. Specifically, we have defined a model with 3 input channels for kernel sizes 4, 6, and 8. 
 
 <p>
 ![](figures/multichannel_cnn.png){width=80%}
 </p>
 
-Figure 1: Visual representation of our multi-channel CNNs with kernal sizes 4, 6, and 8.
+Figure 1: Visual representation of our multi-channel CNNs with kernel sizes 4, 6, and 8.
 
 <br>
 
@@ -86,9 +86,9 @@ The GRU part of Bi-GRUs are similar to LSTMs, with the major difference being th
 
 **Comparing Question 2 to Question 1:**
 
-Question 2 posed several challenges as the themes initially created for this question were deemed unreliable to cover the full scope of the problem. Additionally, BC Stats wanted these themes to align with themes from Question 1. To address this, we compared the words used and the frequency of these words in the responses for both questions. 
+Question 2 posed several challenges as the inital themes for this question were deemed unreliable to cover the full scope of the problem. Additionally, BC Stats wanted Question 2's themes to align better with themes from Question 1. To address this, we compared the words used and the frequency of these words in the responses for both questions. 
 
-The plot below (Figure 2) shows a linear trend in the frequency of common words between Question 1 and Question 2. For example, the word “communication” would appear approximately 1 out of 100 words read in the comments for both questions. The similarity in the vocabulary and frequency of words supported our decision to use our theme model developed using Question 1's themes for Question 2's predictions. 
+The plot below (Figure 2) shows a linear trend in the frequency of common words between Question 1 and Question 2. For example, the word “communication” would appear approximately 1 out of 100 words read in the comments for both questions. We also assume concern and appreication within the workforce focus on similar topics. The similarity in the vocabulary and frequency of words supported our decision to use our theme model developed using Question 1's themes for Question 2's predictions. 
 
 <p>
 ![](figures/frequency_words.png){width=90%}
@@ -142,15 +142,16 @@ Below are our results for the baseline and deep learning model. We compared our 
 Figure 4: Comparison bar charts of our model's and [last year's capstone group's](https://github.com/aaronquinton/mds-capstone-bcstats/blob/master/reports/BCStats_Final_Report.pdf) model's performance on their precision, recall and F1 scores. 
 
 
-```{r, evaluate=FALSE, include=FALSE}
+```{r, evaluate = FALSE, include=FALSE}
 baseline <- read.csv("tables/baseline_results.csv")
 
-#kable(baseline[1,] %>%
- #       select(Model, Test.Accuracy, Test.Recall,
-  #             Test.Precision, Test.F1))
+kable(baseline[1,] %>%
+        select(Model, Test.Accuracy, Test.Recall,
+               Test.Precision, Test.F1))
 
 advanced <- read.csv("tables/theme_tables/theme_pred_test_results.csv")
 
+advanced
 ```
 
 <br> 
@@ -159,18 +160,21 @@ advanced <- read.csv("tables/theme_tables/theme_pred_test_results.csv")
 
 \newpage
 
+
+The label-wise results below (Table 2) indicate that most themes have high precision and recall. **"Y_count"** is the test data's true number of comments in the theme, **"Pred_count"** is how many comments our model predicted, and **"Y_count_train"** is the number of training data the model had for each theme. 
+
 Table 2: Prediction on test set for our main theme models performance for labelling each theme
 ```{r echo=FALSE}
 themes <- read.csv('tables/theme_tables/themewise_test_pr.csv')
 
 kable(themes %>%
-        arrange(desc(F1.Score)))
+        arrange(desc(F1.Score))) 
 
 ```
 
-The label-wise results indicate that most themes have high precision and recall. When using the model, theme comments with high precision and recall scores (> 0.67) do not need to be confirmed and can be encoded automatically. The themes with precision and recall scores above 0.67 are **CB, TEPE, CPD, SP, FWE**. We are confident that the model is prone to less error when predicting these.
+When using the model, theme comments with high precision and recall scores (> 0.67) do not need to be confirmed and can be encoded automatically. The themes with precision and recall scores above 0.67 are **CB, TEPE, CPD, SP, FWE**. We are confident that the model is prone to less error when predicting these.
 
-Themes with lower precision and recall scores such as **OTH** should be manually verified by the BC Stats team. We recommend using a combination of both machine learning and human annotators for optimal results. 
+Themes with lower precision and recall scores such as **OTH** should be manually verified by the BC Stats team. For OTH theme, is it the case that the model performs poorly because it is a catchall category and probably the model was unable to find patterns for this category. We recommend using a combination of both machine learning and human annotators for optimal results. 
 
 **Results for Subtheme Models**
 
@@ -192,7 +196,7 @@ Below are our results using the 2-stage hierarchical approach. The following res
 
 <br>
 
-Table 3: Results of subtheme models performance during 2nd stage of hierarchical approach. After comments have been predicted using main theme model. 
+Table 3: Results of subtheme models performance during 2nd stage of hierarchical approach. After comments have been predicted using the main theme model. 
 ```{r, echo= FALSE}
 
 subthemes <- read.csv("tables/subtheme_tables/subtheme_pred_results.csv")
@@ -202,6 +206,8 @@ kable(subthemes[2:6] %>%
 ```
 
 Despite OTH having the best precision and recall curve shown in Figure 4, we have achieved low results using our hierarchical 2-stage approach. This is due to error from the main themes model being propagated into our 2nd stage of our hierarchical model. The theme OTH had low precision and recall in our themes model which can be attributed to its small sample size. We believe that increasing the sample size may lead to increase in precision and recall metrics. 
+
+\newpage
 
 **Predicting Themes for Question 2**
 
@@ -217,7 +223,7 @@ Figure 6: The bar graph compares how the main theme model performed predicting f
 
 **Dashboard**
 
-The dashboard provides a way for BC Stats to explore the summarized text data. There are 3 tabs, Concerns, Appreciations, and Comparison. The Concerns and Appreciations tabs looks into Question 1 and 2 respectively. Within each tab, shows the common texts in the comments using word cloud, markov chain, sentimental analysis and occurrences in the data. In the Comparisons tab, you can compare the concern and appreciations expressed in each theme for the ministries over the given years. For example, you can see whether the theme Compensation and Benefits increased or decreased in appreciations and concerns for your ministry of interest from 2013-2020. 
+The dashboard provides a way for BC Stats to explore the summarized text data. There are 3 tabs, Concerns, Appreciations, and Comparison. The Concerns and Appreciations tabs looks into Question 1 and 2 respectively. Within each tab, we show the common texts in the comments using word cloud, interactions between relevant words using word ngrams, sentiment analysis of comments. In the Comparisons tab, you can compare the concern and appreciations expressed in each theme for the ministries over the given years. For example, you can see whether the theme Compensation and Benefits increased or decreased in appreciations and concerns for your ministry of interest from 2013-2020. 
 
 <p>
 ![](figures/dashboard.png){width=80%}
@@ -231,12 +237,12 @@ Figure 7: First page of our dashboard
 
 **Classification Models**
 
-We've built several models to help the process of manually labelling survey questions. Although, we haven't fully achieved a perfect model, it is able to make the process easier and faster. Specifically, comments can be automatically encoded into themes
+We've built several models to help the process of manually labelling survey questions. Although we haven't fully achieved a perfect model, it would make the manual labeling process easier and faster. Specifically, comments can be automatically encoded into themes
 **CB, TEPE, CPD, SP,** and **FWE** as they had precision and recall values ranging between 0.73-0.90 in the main theme model. 
 
 Our subthemes model, although had promising results during training, faced the consequences of the errors prior in the main theme model step. However, they were all able to perform higher than the minimum requirement desired by BC Stats. Particularly for subthemes models that performed low, such as OTH, we expect better results with more data. 
 
-We also recommend creating embeddings and padded data on sensitive data so it can be uploaded into public cloud services (Google Gollab, AWS). This can allow more complex machine learning algorithms to be incorporated to improving the model.
+We also recommend creating embeddings and padded data on sensitive data so it can be uploaded into public cloud services (Google Gollab, AWS). This can allow more complex machine learning algorithms to be incorporated to improve the model.
 
 \newpage
 
@@ -261,4 +267,4 @@ We also recommend creating embeddings and padded data on sensitive data so it ca
 
 - [Silwimba F. (October, 2018) Bidirectional GRU for Text classification by relevance to SDG#3 indicators.](https://medium.com/@felixs_76053/bidirectional-gru-for-text-classification-by-relevance-to-sdg-3-indicators-2e5fd99cc341#:~:text=Bidirectional%20GRU's%20are%20a%20type,predictions%20about%20the%20current%20state.&text=Gated%20Recurrent%20Unit%20(GRU)%20for%20Emotion%20Classification%20from%20Noisy%20Speech.)
 
-
+- [Li S. (2018) Named Entity Recognition with NLTK and SpaCy](https://towardsdatascience.com/named-entity-recognition-with-nltk-and-spacy-8c4a7d88e7da)
